--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "apollo-datasource-rest": "^3.7.0",
     "apollo-server-express": "^3.9.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "graphql": "^16.5.0",
+    "joi": "^17.9.2",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -41,7 +42,7 @@
     "typeorm": "^0.3.15"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
+    "@nestjs/cli": "^7.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
